# WolkGatewayModule-SDK-Cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RELEASE_NOTES.txt  conanfile.txt  configure.sh
cmake/: clang-format.cmake
example/: Application.cpp  Configuration.cpp  Configuration.h
src/: ActuationHandler.h  ActuatorStatusProvider.h  ActuatorStatusProviderPerDevice.h  ConfigurationHandler.h  ConfigurationHandlerPerDevice.h  ConfigurationProvider.h  ConfigurationProviderPerDevice.h  DeviceStatusProvider.h  FileHandler.cpp  FileHandler.h  FirmwareInstaller.h  FirmwareVersionProvider.h  InboundGatewayMessageHandler.cpp  InboundGatewayMessageHandler.h  InboundMessageHandler.cpp  InboundMessageHandler.h  OutboundDataService.cpp  OutboundServiceDataHandler.h  RegistrationResponseHandler.h  Version.h  Wolk.cpp  Wolk.h  WolkBuilder.cpp  WolkBuilder.h
src/api/: PlatformStatusListener.h
src/connectivity/: ConnectivityService.cpp  ConnectivityService.h
src/connectivity/json/: JsonDtoParser.cpp  JsonDtoParser.h  OutboundMessageFactory.cpp  OutboundMessageFactory.h  RegistrationProtocol.cpp  RegistrationProtocol.h
src/connectivity/mqtt/: MqttClient.cpp  MqttClient.h  MqttConnectivityService.cpp  MqttConnectivityService.h  PahoMqttClient.cpp  PahoMqttClient.h
src/model/: ActuatorGetCommand.cpp  ActuatorGetCommand.h  ActuatorManifest.cpp  ActuatorManifest.h  ActuatorSetCommand.cpp  ActuatorSetCommand.h  ActuatorStatus.cpp  ActuatorStatus.h  Alarm.cpp  Alarm.h  AlarmManifest.cpp  AlarmManifest.h  BinaryData.cpp  BinaryData.h  ConfigurationManifest.cpp  ConfigurationManifest.h  ConfigurationSetCommand.cpp  ConfigurationSetCommand.h  Device.cpp  Device.h  DeviceManifest.cpp  DeviceManifest.h  DeviceRegistrationRequest.cpp  DeviceRegistrationRequest.h  DeviceRegistrationRequestDto.cpp  DeviceRegistrationRequestDto.h  DeviceRegistrationResponse.cpp  DeviceRegistrationResponse.h  DeviceRegistrationResponseDto.cpp  DeviceRegistrationResponseDto.h  DeviceReregistrationResponse.cpp  DeviceReregistrationResponse.h  DeviceReregistrationResponseDto.cpp  DeviceReregistrationResponseDto.h  DeviceStatus.h  DeviceStatusResponse.cpp  DeviceStatusResponse.h  FilePacketRequest.cpp  FilePacketRequest.h  FirmwareUpdateCommand.cpp  (+12 more)
src/persistence/: Persistence.h
src/persistence/inmemory/: InMemoryPersistence.cpp  InMemoryPersistence.h
src/protocol/: DataProtocol.h  PlatformStatusProtocol.h  Protocol.h  ProtocolManager.h  RegistrationProtocol.h  StatusProtocol.h
src/protocol/json/: JsonPlatformStatusProtocol.cpp  JsonPlatformStatusProtocol.h  JsonProtocol.cpp  JsonProtocol.h  JsonRegistrationProtocol.cpp  JsonRegistrationProtocol.h  JsonStatusProtocol.cpp  (+2 more)
src/service/: BinaryDataListener.h  DataService.cpp  DataService.h  DeviceRegistrationService.cpp  DeviceRegistrationService.h  DeviceStatusService.cpp  DeviceStatusService.h  FileDownloadService.cpp  FileDownloadService.h  FirmwareInstaller.h  FirmwareUpdateCommandListener.h  FirmwareUpdateService.cpp  FirmwareUpdateService.h  PlatformStatusService.cpp  PlatformStatusService.h  UrlFileDownloader.h  WolkaboutFileDownloader.h
src/utilities/: Buffer.h  ByteUtils.cpp  ByteUtils.h  CommandBuffer.cpp  CommandBuffer.h  Configuration.cpp  Configuration.h  ConsoleLogger.cpp  ConsoleLogger.h  FileSystemUtils.cpp  FileSystemUtils.h  Logger.cpp  Logger.h  StringUtils.cpp  StringUtils.h  Timer.cpp  Timer.h  json.hpp
tests/: DataServiceTests.cpp  MockDataProtocol.h  MockPersistance.h
tools/: make_release.sh  make_zip.sh
(+2 files in other folders)
